# PlannerAI

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DEPLOY.md  Dockerfile  LICENSE  Makefile  README.md  backend.service  deploy.sh  docker-compose.yml  main.py  migration.py  nginx.conf  pyproject.toml  start.sh
.github/workflows/: deploy-backend.yml
NLP_engine/: README.md  speech_to_text.py  text_parser.py  text_to_speech.py
agent/: pyproject.toml
agent_service/: Dockerfile  logic.py  pyproject.toml
app/: agent.py  bot.py  main.py
app/bot/: handlers.py
app/db/: models.py
backend/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  run.sh
backend/app/: main.py
backend/app/api/: config.py  database.py  schemas.py
backend/app/api/agent/: logic.py  routes.py  tools.py
backend/app/api/auth/: dependencies.py  google_auth.py  jwt_auth.py  models.py  routes.py  storage.py
backend/app/api/calendar/: routes.py  service.py
backend/app/api/events/: routers.py
backend/app/api/public/: routers.py
backend/app/caldav/: ics_builder.py  routers.py
backend/app/storage/: memory_storage.py
backend_service/: Dockerfile  main.py  pyproject.toml
backend_service/app/: main.py
backend_service/app/api/events/: routers.py
backend_service/app/api/public/: routers.py
backend_service/app/caldav/: ics_builder.py  routers.py
bot/: main.py  pyproject.toml
bot/app/: backend_client.py  config.py  handlers.py  router.py  whisper_engine.py
bot_service/: Dockerfile  pyproject.toml
shared/: __init__.py  pyproject.toml  schemas.py
telegram_bot/: README.md  __init__.py  api_client.py  bot.py  config.py  handlers.py  pyproject.toml  run.sh
tests/: __init__.py
