[project]
name = "ai-planner-vibe-bot"
version = "0.1.0"
description = "Telegram voice-to-text bot with FastAPI agent, using uv and aiogram polling."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Your Name" }
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "aiogram>=3.13.0",
    "openai-whisper>=20231117",
    "python-multipart>=0.0.9",
    "pydantic>=2.8.0",
    "openai>=1.0.0",
    "parsedatetime>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]



