[project]
name = "agent-service"
version = "0.1.0"
description = "LLM agent service for AI Planner"
readme = "../README.md"
requires-python = ">=3.11"
authors = [
    { name = "Your Name" }
]

dependencies = [
    "openai>=1.0.0",
    "parsedatetime>=2.6",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_service", "shared"]

