[project]
name = "backend-service"
version = "0.1.0"
description = "FastAPI backend service for AI Planner"
readme = "../README.md"
requires-python = ">=3.11"
authors = [
    { name = "Your Name" }
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
    "openai>=1.0.0",
    "parsedatetime>=2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend_service", "agent_service", "shared"]

