[project]
name = "bot-service"
version = "0.1.0"
description = "Telegram bot service for AI Planner"
readme = "../README.md"
requires-python = ">=3.11"
authors = [
    { name = "Your Name" }
]

dependencies = [
    "aiogram>=3.13.0",
    "openai-whisper>=20231117",
    "httpx>=0.28.1",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot_service", "shared"]

